# ffzap

./: .gitignore  Cargo.toml  README.md  license.md  readme.md  snapcraft.yaml
.github/workflows/: build-binaries-and-update-release.yaml  build-cli.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  logger.rs  processor.rs
docs/: CNAME  index.html
gui/: index.html
shared/: Cargo.toml
shared/src/: args.rs  lib.rs  logger.rs  processor.rs  progress.rs
src/: job.rs  logger.rs  main.rs  progress.rs
ui/: Cargo.toml  README.md  index.html  package.json
ui/src/: dom.ts  main.rs  main.ts  models.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
