[workspace]
members = ["cli", "core", "ui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "license.md"
repository = "https://github.com/CodeF0x/ffzap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
chrono = "0.4.39"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "6.0.0"
indicatif = "0.17.9"
serde = "1.0.219"
tauri = "2.6.2"
colored = "3.0.0"
