[package]
name = "ffzap"
version = "1.1.2"
edition.workspace = true
license-file.workspace = true
keywords = [
    "ffmpeg",
    "media-processing",
    "cli",
    "audio-conversion",
    "video-conversion",
]
description = "⚡ A multithreaded CLI for digital media processing using ffmpeg. If ffmpeg can do it, ffzap can do it - as many files in parallel as your system can handle."
repository.workspace = true

[dependencies]
ffzap_core = { path = "../core" }
clap.workspace = true
colored.workspace = true
