[package]
name = "ffzap_core"
version = "1.1.2"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
keywords = [
    "ffmpeg",
    "media-processing",
    "cli",
    "audio-conversion",
    "video-conversion",
]
description = "The core library crate for the ffzap cli and ui."

[dependencies]
chrono.workspace = true
dirs.workspace = true
indicatif.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, optional = true }
colored = { workspace = true }
walkdir = "2.5.0"


[features]
default = []
ui = ["tauri"]
