[package]
name = "ffzap-shared"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
indicatif.workspace = true 
clap.workspace = true